2004-04-15  Andreas Rottmann  <a.rottmann@gmx.at>

	* [guile-gnome started]
